@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.255 2003/09/10 21:51:22 itojun Exp $
+# $NetBSD: Makefile,v 1.256 2003/09/21 16:24:34 kim Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -179,6 +179,7 @@ SUBDIR+=	p5-GDTextUtil
 SUBDIR+=	p5-GIFgraph
 SUBDIR+=	p5-Gdk-Pixbuf
 SUBDIR+=	p5-GraphViz
+SUBDIR+=	p5-Image-Imlib2
 SUBDIR+=	p5-Image-Info
 SUBDIR+=	p5-Image-Size
 SUBDIR+=	p5-PerlMagick
